--- a/Pokemon.css
+++ b/Pokemon.css
@@ -1,3 +1,4 @@
 svg {
   background-image: url("http://orig08.deviantart.net/1688/f/2013/098/e/7/pokemon_x_y_battle_scene_by_jenske05-d5ynr9c.png");
+  background-size: 100% 100%
 }
